# mbot_natural_language_understanding_bert

./: .gitignore
mbot_nlu_bert/: CMakeLists.txt  package.xml  setup.py
mbot_nlu_bert/common/src/mbot_nlu_bert/: mbot_nlu_bert_common.py  mbot_nlu_bert_common_v2.py  mbot_nlu_bert_common_v3.py
mbot_nlu_bert/ros/doc/: README.md
mbot_nlu_bert/ros/launch/: mbot_nlu_bert.launch
mbot_nlu_bert/ros/msg/: DialogAct.msg
mbot_nlu_bert/ros/scripts/: mbot_nlu_bert_node
mbot_nlu_bert/ros/src/mbot_nlu_bert_ros/: mbot_nlu_bert_node.py  ontology.json
